made JAVA_HOME be passed to sub process

--- a/build.gradle
+++ b/build.gradle
@@ -109,14 +109,9 @@ def withSocket(host, port, closure) {
 }
 
 class ProcessUtil {
-    static execute(List command, File currentDir = null, Closure procHandler = {}) {
-        if (currentDir) {
-            println "Executing '${command.join(' ')}' at ${currentDir} ..."
-            doExecute({ command.execute([], currentDir) }, procHandler)
-        } else {
-            println "Executing '${command.join(' ')}' ..."
-            doExecute({ command.execute() }, procHandler)
-        }
+    static execute(List command, File currentDir, Closure procHandler = {}) {
+        println "Executing '${command.join(' ')}' at ${currentDir} ..."
+        doExecute({ command.execute(["JAVA_HOME=${System.env['JAVA_HOME']}"], currentDir) }, procHandler)
     }
 
     private static doExecute(execClosure, procHandler) {
