added about unsupported commands

--- a/src/docs/guide/toc.yml
+++ b/src/docs/guide/toc.yml
@@ -21,3 +21,4 @@ advancedTopics:
         title: Communication Protocol
         standardProtocol: Standard Protocol
         httpProtocol: HTTP Protocol
+    unsupportedCommands: Unsupported Commands
